# Yumis

./: .gitignore  README.md  ans.docx  create.out  data.out  data1.out  line1.out  line2.out  v2-37ff349a20743d8594a22aed15728fee_720w.psd  京子.txt  密码.txt  属性模板.xlsx
Game/: Assembly-CSharp.csproj
Gamemaker/: 操作介绍.txt
Gamemaker/2048.gmx/: 2048.project.gmx
Gamemaker/Castle Legend.gmx/: Castle Legend.project.gmx
Gamemaker/eggg.gmx/: eggg.project.gmx
Java/: helloworld.java
Java/.metadata/: version.ini
Line/: CMakeLists.txt  Graphic.cpp  PainterEngine_Startup.h
PS/: xuezhe.psd  明日方舟模板.psd
PS/psd/: 0 (1).psd  22222.psd  33333333.psd  天语2.psd  未标题-1.psd  未标题-2.psd
Self/: EvD4FeHVkAcv11b.jfif
eggg.gmx/Configs/: Default.config.gmx
eggg.gmx/fonts/: font0.font.gmx  font2.font.gmx  font3.font.gmx  font4.font.gmx
eggg.gmx/objects/: luke_powerlock.object.gmx  obj_atack_fire.object.gmx  obj_attack_dark.object.gmx  obj_attack_ice.object.gmx  obj_attack_light.object.gmx  obj_back.object.gmx  obj_boss_hp_back.object.gmx  obj_buff.object.gmx  obj_debug.object.gmx  obj_down.object.gmx  obj_draw_damage2.object.gmx  obj_draw_damage3.object.gmx  obj_draw_miss.object.gmx  obj_draw_text.object.gmx  obj_draw_text_back.object.gmx  obj_draw_text_mj.object.gmx  (+46 more)
stg_game.gmx/: stg_game.project.gmx
test/: .clang-format  AAA.cpp  AAA_copy.cpp  Main.java  Question1.md  Question2.md  Question3.md  Tuxuele.cpp  p.py  tempCodeRunnerFile.cpp
使劲摸/: 模板.xlsx
在？为什么我这么美？/: 新建文本文档.txt
小说/: 求你动一下这个.docx
画图/: Graphic.h  PainterEngine_Application.c
设定/: lxfs.txt  属性模板.xlsx
(+1358 files in other folders)
